syntax = "proto3";

option go_package = "github.com/dehwyy/Makoto/backend/grpc/authGrpc";

package authGrpc;

// Requests

// QUERIES
message UserGetQuestionRequest {
  string user_id = 1;
}


message UserGetRequest {
  string user_id = 1;
}

// MUTATIONS
message UserSignUpRequest {
  string username = 1;
  string password = 2;
  string question = 3;
  string answer = 4;
}

message UserSignInRequest {
  string username = 1;
  string password = 2;
}

message UserSignOutRequest {
  string user_id = 1;
}

message UserChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
  string user_id = 3;
}

message UserSendAnswerAndChangePasswordRequest {
  string answer = 1;
  string new_password = 2;
  string user_id = 3;
}


message AccessToken {
  string access_token = 1;
}

// responses

// Only no token required (no auth required) request OR ValidateAuth
message UserResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}


message UserQuestionResponse {
  string question = 1;
}

message UserDataResponse {
  string username = 1;
}

message UserChangePasswordResponse {
 string access_token = 1;
 string refresh_token = 2;
}

message Nil {}

service User {
  // mutation && no token (on each request tokens pair would generate and save to db)
  rpc SignUp(UserSignUpRequest) returns (UserResponse); // done
  rpc SignIn(UserSignInRequest) returns (UserResponse); // done
  rpc SignOut(UserSignOutRequest) returns (Nil); // done
  rpc ValidateAuth(AccessToken) returns (UserResponse); // done

  // With token ( authed )
  // query
  rpc GetQuestion(UserGetQuestionRequest) returns (UserQuestionResponse); // done
  rpc GetUserById(UserGetRequest) returns (UserDataResponse); // done
  // mutation
  rpc ChangePasswordByAnswer(UserSendAnswerAndChangePasswordRequest) returns (UserChangePasswordResponse); // answer on <user.question> yeah - done
  rpc ChangePassword(UserChangePasswordRequest) returns (UserChangePasswordResponse); // done
}
